- Bug fixes
- Translation updates by the translators on Crowdin