@@ -6,9 +6,9 @@
         <item name="android:colorPrimary">@color/pinkPrimary</item>
 
         <item name="android:windowContentTransitions">true</item>
-        <item name="android:textDirection">locale</item>
         <item name="android:windowSplashScreenAnimatedIcon">@drawable/avd_splash_icon</item>
         <item name="android:windowSplashScreenAnimationDuration">@integer/splash_screen_duration</item>
+        <item name="android:fitsSystemWindows">false</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
 <!--        <item name="android:enforceStatusBarContrast">true</item>-->
         <item name="android:navigationBarColor">@android:color/transparent</item>
