@@ -2,7 +2,7 @@
 targetSdk = "36"
 minSdk = "24"
 minSdkBaselineProfile = "28"
-android-application = "9.1.0-alpha06"
+android-application = "9.1.0-alpha07"
 compose-multiplatform = "1.11.0-alpha02"
 
 kotlin = "2.3.0"
@@ -35,7 +35,7 @@ material3 = "1.11.0-alpha02"
 nanohttpd = "2.3.1"
 nav3 = "1.1.0-alpha02"
 okhttp = "5.3.2"
-paging = "3.4.0-rc01"
+paging = "3.4.0"
 play-publisher = "4.0.0"
 profileinstaller = "1.4.1"
 qrcode = "4.5.0"
